# vela-emby-player

./: .gitignore  LICENSE  QA.md  README.md  TODO_EXTERNAL.md  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
scripts/: run-tauri.mjs  sign-macos-app.mjs  vendor-libmpv-macos.mjs
src/: App.test.ts  App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css  vuetify-settings.scss
src/components/: ConnectionPanel.vue  LibraryAdvancedFilters.vue  LibraryBrowser.test.ts  LibraryBrowser.vue  LibraryMediaCard.vue  LiveTvGuideTimeline.vue  MediaCredits.vue  MediaDetailView.test.ts  MediaDetailView.vue  MediaRowSection.vue  MediaTechnicalInfo.vue  PlaybackHistoryCard.vue  PlaybackHistoryView.test.ts  PlaybackHistoryView.vue  PlayerChapterPanel.vue  PlayerControls.test.ts  PlayerControls.vue  PlayerPanel.test.ts  PlayerPanel.vue  PlayerQueuePanel.vue  PlayerSettingsPanel.vue  RelatedMediaRail.vue  SettingsView.vue
src/composables/: embyAccountStore.ts  embyLibraryApi.test.ts  embyLibraryApi.ts  embyLiveTvApi.test.ts  embyLiveTvApi.ts  embyPlaybackApi.ts  embyUserDataApi.ts  libraryFilters.test.ts  libraryFilters.ts  mediaItemDisplay.ts  playbackChapters.test.ts  playbackChapters.ts  playbackPreferences.test.ts  playbackPreferences.ts  useEmbyClient.ts  useEpisodeQueue.test.ts  useEpisodeQueue.ts  usePlaybackQueue.test.ts  usePlaybackQueue.ts  usePlaybackReporting.ts  usePlayerEngine.ts  useSoftwareRenderer.ts
src/plugins/: vuetify.ts
src/test/: componentStubs.ts
