[package]
name = "vela-emby-player"
version = "0.1.0"
description = "Desktop Emby client with embedded mpv playback"
authors = ["ice"]
edition = "2021"

[lib]
name = "vela_emby_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libloading = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
keyring = { version = "3", features = ["apple-native"] }
