[package]
name = "vela-emby-player"
version = "0.1.0"
description = "Desktop Emby client with embedded mpv playback"
authors = ["ice"]
edition = "2021"

[lib]
name = "vela_emby_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
libloading = "0.9"
base64 = "0.22"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
keyring-core = "1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
